# code-llm

./: .gitignore  CMakeLists.txt  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
docs/: journal.bib  journal.typ
docs/runs/qwen3_1759779065/csv/: loss_train.csv  loss_val.csv
docs/runs/qwen3_1759875426/csv/: loss_train_step.csv  loss_val_step.csv  metrics_val_perplexity.csv
docs/runs/qwen3_1759926986/csv/: hp_val_loss.csv  loss_train.csv  loss_train_step.csv  loss_val.csv  loss_val_step.csv  lr.csv  metrics_val_perplexity.csv
py/: data_loader.py  model.py  pyproject.toml  train.py
scripts/: download_all.sh  download_bigcode_stack.py  download_py150.sh  download_shakespeare.sh  tensorboard_to_csv.py
src/: dataloader.cpp  dataloader.hpp  decode.cpp  export.py  io.cpp  io.hpp  main.cpp  predict.py  serve.py  test_dataloader.py  text_test.cpp  threading.cpp  tokenize.cpp  tokenizer.cpp  tokenizer.h  tokenizer.hpp  tokenizer_test.cpp  train.py  train_tokenizer.py  utf8.c  utf8.h  utf8_test.c  visualize.cpp
src/dataloaders/: data_loader.py  py150.py  py150_dataloader.py  test_py150.py  test_token_datamodule.py  token_dataloader.py  token_datamodule.py
src/lib/: io.hpp  text.hpp  threading.hpp  tokenizer.cpp
src/models/: model.py  qwen3.py  transformer.py
src/trainers/: trainer.py
tokenizer/: .gitignore  CMakeLists.txt  pyproject.toml  tokenizer.py
tokenizer/python/tokenizer/: __init__.py  tokenizer.py  tokenizer_cpp.pyi
tokenizer/src/: decode.cpp  python_bindings.cpp  tokenize-cli.cpp  tokenize.cpp  visualize.cpp
tokenizer/src/lib/: dataloader.cpp  dataloader.hpp  io.cpp  test_tokenizer.cpp  text.cpp  tokenizer.cpp  tokenizer.hpp
