[project]
name = "llm"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.63.0",
    "numpy>=2.3.3",
    "peft>=0.17.1",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "transformers>=4.51.0",
    "tqdm>=4.67.1",
    "tokenizer @ file:///${PROJECT_ROOT}/tokenizer",
    "lightning>=2.5.5",
]
