[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "tokenizer"
version = "0.1.0"
description = "C++ BPE tokenizer with Python bindings"
requires-python = ">=3.8"
dependencies = []

[tool.scikit-build]
wheel.packages = ["python/tokenizer"]
build-dir = "build"
cmake.build-type = "Release"
